// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions/version getVersion dispatches the correct actions on successful get version 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/version/GET_VERSION",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": Object {
      "api_version": "1.1.2",
      "flexget_version": "2.10.11",
      "latest_version": "2.10.60",
    },
    "type": "@flexget/version/GET_VERSION",
  },
]
`;

exports[`actions/version getVersion dispatches the correct actions on unsuccessful get version 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/version/GET_VERSION",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [Error],
    "type": "@flexget/version/GET_VERSION",
  },
]
`;
